force-app/main/default/objects/EYI_REC__c/EYI_REC__c.object-meta.xml
<CustomObject>
    <label>REC Account</label>
    <nameField>
        <label>REC Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REC Accounts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>