force-app/main/default/objects/EYI_REC__c/fields/Branding_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Branding_Opportunity__c</fullName>
    <label>Branding Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>