force-app/main/default/objects/EYI_REC__c/fields/Club_Membership__c.field-meta.xml
<CustomField>
    <fullName>Club_Membership__c</fullName>
    <label>Club Membership?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>