force-app/main/default/objects/EYI_REC__c/fields/Correspondence_1_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_1_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correspondence 1 Pincode</label>
    <referenceTo>EYI_Panchshil_Master__c</referenceTo>
    <relationshipLabel>REC Accounts (Correspondence 1 Pincode)</relationshipLabel>
    <relationshipName>REC_Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>