force-app/main/default/objects/EYI_REC__c/fields/Correspondence_2_Pincode__c.field-meta.xml
<CustomField>
    <fullName>Correspondence_2_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correspondence 2 Pincode</label>
    <referenceTo>EYI_Panchshil_Master__c</referenceTo>
    <relationshipLabel>REC Accounts (Correspondence 2 Pincode)</relationshipLabel>
    <relationshipName>REC_Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>