force-app/main/default/objects/EYI_REC__c/fields/DigiLocker_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>DigiLocker_Transaction_Id__c</fullName>
    <label>DigiLocker Transaction Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>