force-app/main/default/objects/EYI_REC__c/fields/DigiLocker_URL__c.field-meta.xml
<CustomField>
    <fullName>DigiLocker_URL__c</fullName>
    <label>DigiLocker URL</label>
    <type>Url</type>
</CustomField>