force-app/main/default/objects/EYI_REC__c/fields/EIY_Approval_Status_to_Inactive__c.field-meta.xml
<CustomField>
    <fullName>EIY_Approval_Status_to_Inactive__c</fullName>
    <label>Active to Inactive/Duplicate/Blacklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>TL Approved</fullName>
                <label>Approved by Sourcing TL</label>
            </value>
            <value>
                <fullName>TL Rejected</fullName>
                <label>Rejected by Sourcing TL</label>
            </value>
            <value>
                <fullName>Head Approved</fullName>
                <label>Approved By Sourcing Head</label>
            </value>
            <value>
                <fullName>Head Rejected</fullName>
                <label>Rejected By Sourcing Head</label>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>