force-app/main/default/objects/EYI_REC__c/fields/EYI_Aadhar__c.field-meta.xml
<CustomField>
    <fullName>EYI_Aadhar__c</fullName>
    <label>Aadhar Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>