force-app/main/default/objects/EYI_REC__c/fields/EYI_Aadhar_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>EYI_Aadhar_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aadhar Uploaded?</label>
    <type>Checkbox</type>
</CustomField>