force-app/main/default/objects/EYI_REC__c/fields/EYI_Add_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>EYI_Add_Correspondence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Correspondence</label>
    <type>Checkbox</type>
</CustomField>