force-app/main/default/objects/EYI_REC__c/fields/EYI_Address1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address1__c</fullName>
    <description>Office/House No</description>
    <label>Correspondence 2 Address 1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>