force-app/main/default/objects/EYI_REC__c/fields/EYI_Address2__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address2__c</fullName>
    <description>Area/Street</description>
    <label>Correspondence 2 Address 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>