force-app/main/default/objects/EYI_REC__c/fields/EYI_Address3__c.field-meta.xml
<CustomField>
    <fullName>EYI_Address3__c</fullName>
    <inlineHelpText>Landmark</inlineHelpText>
    <label>Correspondence 2 Address 3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>