force-app/main/default/objects/EYI_REC__c/fields/EYI_Alternate_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Alternate_Email__c</fullName>
    <label>Secondary Email Id</label>
    <type>Email</type>
</CustomField>