force-app/main/default/objects/EYI_REC__c/fields/EYI_Alternate_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Alternate_Mobile__c</fullName>
    <label>Secondary Mobile Number</label>
    <type>Phone</type>
</CustomField>