force-app/main/default/objects/EYI_REC__c/fields/EYI_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>EYI_Alternate_Phone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>