force-app/main/default/objects/EYI_REC__c/fields/EYI_AOP_End_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_AOP_End_Date__c</fullName>
    <label>AOP End Date</label>
    <type>Date</type>
</CustomField>