force-app/main/default/objects/EYI_REC__c/fields/EYI_AOP_Remarks__c.field-meta.xml
<CustomField>
    <fullName>EYI_AOP_Remarks__c</fullName>
    <label>AOP Remarks</label>
    <type>TextArea</type>
</CustomField>