force-app/main/default/objects/EYI_REC__c/fields/EYI_AOP_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_AOP_Start_Date__c</fullName>
    <label>AOP Start Date</label>
    <type>Date</type>
</CustomField>