force-app/main/default/objects/EYI_REC__c/fields/EYI_Approval_of_Inactive_Duplicate_toAct__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approval_of_Inactive_Duplicate_toAct__c</fullName>
    <label>Approval of Inactive/Duplicate to Active</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved by Sourcing TL</fullName>
            </value>
            <value>
                <fullName>Rejected by Sourcing TL</fullName>
            </value>
            <value>
                <fullName>Approved by Sourcing Head</fullName>
            </value>
            <value>
                <fullName>Rejected by Sourcing Head</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>