force-app/main/default/objects/EYI_REC__c/fields/EYI_Approval_Status_to_Activate_REC__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approval_Status_to_Activate_REC__c</fullName>
    <label>Approval Status to Activate REC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted For Approval</fullName>
            </value>
            <value>
                <fullName>TL Approved</fullName>
            </value>
            <value>
                <fullName>TL Rejected</fullName>
            </value>
            <value>
                <fullName>Head Approved</fullName>
            </value>
            <value>
                <fullName>Head Rejected</fullName>
            </value>
            <value>
                <fullName>Sales &amp; CRM Head Rejected</fullName>
            </value>
            <value>
                <fullName>Approved By Sales &amp; CRM Head</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>