force-app/main/default/objects/EYI_REC__c/fields/EYI_Area_Of_Operation__c.field-meta.xml
<CustomField>
    <fullName>EYI_Area_Of_Operation__c</fullName>
    <label>Area Of Operation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>National</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>