force-app/main/default/objects/EYI_REC__c/fields/EYI_Birth_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Birth_Date__c</fullName>
    <label>DOB</label>
    <type>Date</type>
</CustomField>