force-app/main/default/objects/EYI_REC__c/fields/EYI_BP_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_BP_Type__c</fullName>
    <label>BP Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_BP_Type</valueSetName>
    </valueSet>
</CustomField>