force-app/main/default/objects/EYI_REC__c/fields/EYI_Business_Aadhar_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Business_Aadhar_No__c</fullName>
    <label>Business Aadhar No.</label>
    <length>12</length>
    <type>Text</type>
</CustomField>