force-app/main/default/objects/EYI_REC__c/fields/EYI_Cancel_Check_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>EYI_Cancel_Check_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancel Check Uploaded?</label>
    <type>Checkbox</type>
</CustomField>