force-app/main/default/objects/EYI_REC__c/fields/EYI_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correspondence 2 City</label>
    <referenceTo>EYI_City__c</referenceTo>
    <relationshipLabel>REC Accounts (City)</relationshipLabel>
    <relationshipName>REC</relationshipName>
    <type>Lookup</type>
</CustomField>