force-app/main/default/objects/EYI_REC__c/fields/EYI_Company_PAN_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company_PAN_No__c</fullName>
    <label>Company TAN No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>