force-app/main/default/objects/EYI_REC__c/fields/EYI_Company_Regisration__c.field-meta.xml
<CustomField>
    <fullName>EYI_Company_Regisration__c</fullName>
    <label>Company Regisration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>