force-app/main/default/objects/EYI_REC__c/fields/EYI_Connect_in_NRI_market__c.field-meta.xml
<CustomField>
    <fullName>EYI_Connect_in_NRI_market__c</fullName>
    <label>Connect in NRI market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>