force-app/main/default/objects/EYI_REC__c/fields/EYI_Correspondence_1_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Correspondence_1_Address_Type__c</fullName>
    <label>Correspondence 1 Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Address_Type</valueSetName>
    </valueSet>
</CustomField>