force-app/main/default/objects/EYI_REC__c/fields/EYI_Correspondence_1_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_Correspondence_1_City__c</fullName>
    <label>Correspondence 1 City</label>
    <length>15</length>
    <type>Text</type>
</CustomField>