force-app/main/default/objects/EYI_REC__c/fields/EYI_Correspondence_2_Locality__c.field-meta.xml
<CustomField>
    <fullName>EYI_Correspondence_2_Locality__c</fullName>
    <label>Correspondence 2 Locality</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Correspondence_2_Address_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>EYI_Locality</valueSetName>
    </valueSet>
</CustomField>