force-app/main/default/objects/EYI_REC__c/fields/EYI_Correspondence_Address_2__c.field-meta.xml
<CustomField>
    <fullName>EYI_Correspondence_Address_2__c</fullName>
    <inlineHelpText>Area/Street</inlineHelpText>
    <label>Correspondence 1 Address 2</label>
    <length>40</length>
    <type>Text</type>
</CustomField>