force-app/main/default/objects/EYI_REC__c/fields/EYI_Correspondence_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_Correspondence_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correspondence 1 City</label>
    <referenceTo>EYI_City__c</referenceTo>
    <relationshipLabel>REC Accounts (Correspondence City)</relationshipLabel>
    <relationshipName>REC_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>