force-app/main/default/objects/EYI_REC__c/fields/EYI_Correspondence_Pincode_Office__c.field-meta.xml
<CustomField>
    <fullName>EYI_Correspondence_Pincode_Office__c</fullName>
    <label>Correspondence 1 Pincode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>