force-app/main/default/objects/EYI_REC__c/fields/EYI_Correspondence_Title__c.field-meta.xml
<CustomField>
    <fullName>EYI_Correspondence_Title__c</fullName>
    <label>Correspondence 1 Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Salutation</valueSetName>
    </valueSet>
</CustomField>