force-app/main/default/objects/EYI_REC__c/fields/EYI_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country_Code__c</fullName>
    <defaultValue>&quot;+91&quot;</defaultValue>
    <label>Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>