force-app/main/default/objects/EYI_REC__c/fields/EYI_Country_Code_for_REC_Correspondence__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country_Code_for_REC_Correspondence__c</fullName>
    <label>Correspondence 1 Country for Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Country</valueSetName>
    </valueSet>
</CustomField>