force-app/main/default/objects/EYI_REC__c/fields/EYI_Country_Code_for_Secondary_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country_Code_for_Secondary_Mobile__c</fullName>
    <label>Country for Secondary Mobile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>EYI_Country</valueSetName>
    </valueSet>
</CustomField>