force-app/main/default/objects/EYI_REC__c/fields/EYI_Country_Code_Secondary_No__c.field-meta.xml
<CustomField>
    <fullName>EYI_Country_Code_Secondary_No__c</fullName>
    <label>Country Code Secondary No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>