force-app/main/default/objects/EYI_REC__c/fields/EYI_CP_Contact_1_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_CP_Contact_1_Mobile_Number__c</fullName>
    <label>Correspondence 2 Mobile Number</label>
    <type>Phone</type>
</CustomField>