force-app/main/default/objects/EYI_REC__c/fields/EYI_CP_E_Mail_Address__c.field-meta.xml
<CustomField>
    <fullName>EYI_CP_E_Mail_Address__c</fullName>
    <label>Correspondence 2 Email</label>
    <type>Email</type>
</CustomField>