force-app/main/default/objects/EYI_REC__c/fields/EYI_Developer_they_are_working_with__c.field-meta.xml
<CustomField>
    <fullName>EYI_Developer_they_are_working_with__c</fullName>
    <label>Developer they are working with</label>
    <length>80</length>
    <type>Text</type>
</CustomField>