force-app/main/default/objects/EYI_REC__c/fields/EYI_Duplicate_REC_Account__c.field-meta.xml
<CustomField>
    <fullName>EYI_Duplicate_REC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Duplicate REC Account</label>
    <referenceTo>EYI_REC__c</referenceTo>
    <relationshipLabel>REC Accounts</relationshipLabel>
    <relationshipName>REC_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>