force-app/main/default/objects/EYI_REC__c/fields/EYI_E_Invoicing_Applicable__c.field-meta.xml
<CustomField>
    <fullName>EYI_E_Invoicing_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Invoicing Applicable?</label>
    <type>Checkbox</type>
</CustomField>