force-app/main/default/objects/EYI_REC__c/fields/eyi_e_kyc_link__c.field-meta.xml
<CustomField>
    <fullName>eyi_e_kyc_link__c</fullName>
    <label>E-KYC Link</label>
    <type>Url</type>
</CustomField>