force-app/main/default/objects/EYI_REC__c/fields/EYI_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Email__c</fullName>
    <label>Primary Email Id</label>
    <type>Email</type>
</CustomField>