force-app/main/default/objects/EYI_REC__c/fields/EYI_Firm_City__c.field-meta.xml
<CustomField>
    <fullName>EYI_Firm_City__c</fullName>
    <label>Firm City</label>
    <length>15</length>
    <type>Text</type>
</CustomField>