force-app/main/default/objects/EYI_REC__c/fields/EYI_Firm_Pincode__c.field-meta.xml
<CustomField>
    <fullName>EYI_Firm_Pincode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Firm Pincode</label>
    <referenceTo>EYI_Panchshil_Master__c</referenceTo>
    <relationshipLabel>REC Accounts (Firm Pincode)</relationshipLabel>
    <relationshipName>REC_Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>