force-app/main/default/objects/EYI_REC__c/fields/EYI_First_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_First_Name__c</fullName>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>