force-app/main/default/objects/EYI_REC__c/fields/EYI_First_Name_of_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>EYI_First_Name_of_Contact_Person__c</fullName>
    <label>Correspondence 2 First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>