force-app/main/default/objects/EYI_REC__c/fields/EYI_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>EYI_GSTIN__c</fullName>
    <label>GSTIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>