force-app/main/default/objects/EYI_REC__c/fields/EYI_GSTN__c.field-meta.xml
<CustomField>
    <fullName>EYI_GSTN__c</fullName>
    <label>GSTN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>