force-app/main/default/objects/EYI_REC__c/fields/EYI_Incorporation_Certificate_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>EYI_Incorporation_Certificate_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Incorporation Certificate Uploaded?</label>
    <type>Checkbox</type>
</CustomField>