force-app/main/default/objects/EYI_REC__c/fields/EYI_Is_AOP__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_AOP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is AOP ?</label>
    <type>Checkbox</type>
</CustomField>