force-app/main/default/objects/EYI_REC__c/fields/EYI_Is_Business_Aadhar_Available__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_Business_Aadhar_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Business Aadhar Available?</label>
    <type>Checkbox</type>
</CustomField>