force-app/main/default/objects/EYI_REC__c/fields/EYI_Is_RERA_Active__c.field-meta.xml
<CustomField>
    <fullName>EYI_Is_RERA_Active__c</fullName>
    <formula>EYI_RERA_Expiry_Date__c  &gt;  TODAY()</formula>
    <label>RERA Active?</label>
    <type>Checkbox</type>
</CustomField>