force-app/main/default/objects/EYI_REC__c/fields/EYI_IsNew__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsNew__c</fullName>
    <formula>ISNULL( CreatedDate )</formula>
    <label>IsNew</label>
    <type>Checkbox</type>
</CustomField>