force-app/main/default/objects/EYI_REC__c/fields/EYI_IsSAPSyncSuccess__c.field-meta.xml
<CustomField>
    <fullName>EYI_IsSAPSyncSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSAPSyncSuccess</label>
    <type>Checkbox</type>
</CustomField>