force-app/main/default/objects/EYI_REC__c/fields/EYI_Last_Name_of_Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>EYI_Last_Name_of_Contact_Person__c</fullName>
    <label>Correspondence 2 Last Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>